Added unit tests for UserController class